# denso_robot_ros_

./: README.md
denso_robot_bringup/launch/: denso_cobotta_bringup.launch  denso_robot_bringup.launch
denso_robot_control/launch/: denso_cobotta_control.launch  denso_cobotta_control.launch.xml
denso_robot_descriptions/cobotta_description/: J1.dae  J2.dae  J3.dae  J5.dae  J6.dae  base_link.dae  cobotta.launch.xml  cobotta.urdf  denso_robot_control.yaml
denso_robot_move/: CMakeLists.txt  package.xml
denso_robot_move/launch/: move_group_interface.launch
denso_robot_move/scripts/: move_interface.py
denso_robot_move/src/: ik_grip.cpp  move_group_in_hand_manipulation.cpp  move_group_in_hand_manipulation_data.cpp  move_group_in_hand_manipulation_hor.cpp  move_group_in_hand_manipulation_hor_data.cpp  move_group_in_hand_manipulation_limit.cpp  move_group_interface_two_points.cpp
denso_robot_moveit_config/config/cobotta_config/: cobotta.srdf
denso_robot_moveit_config/launch/: move_group.launch  moveit.rviz
